Bug 81511 - intel_rapid_start: probe of INT3392:00 failed with error -22
Summary: intel_rapid_start: probe of INT3392:00 failed with error -22
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Other (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
: 81971 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-01 19:42 UTC by Gabriele Mazzotta
Modified: 2015-07-22 00:56 UTC (History)
7 users (show)

See Also:
Kernel Version: 3.16-rc7
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg (54.49 KB, text/plain)
2014-08-04 15:14 UTC, Gabriele Mazzotta
Details
acpidump (459.06 KB, application/octet-stream)
2014-08-05 14:23 UTC, Gabriele Mazzotta
Details
ACPI / scan: Bind ACPI drivers to device object on PNP bus type (1.59 KB, patch)
2014-08-19 23:24 UTC, Rafael J. Wysocki
Details | Diff
ACPI / scan: Bind ACPI drivers to device object on PNP bus type (1.55 KB, patch)
2014-08-20 03:19 UTC, Rafael J. Wysocki
Details | Diff
PATCH: introduce ACPI motherboard resource management (9.81 KB, patch)
2014-08-21 12:11 UTC, Zhang Rui
Details | Diff
grep . /sys/bus/pnp/devices/*/id with patch from comment #15 (114 bytes, text/plain)
2014-08-21 13:40 UTC, Dirk Griesbach
Details
acpidump (143.60 KB, text/plain)
2014-08-21 16:23 UTC, Dirk Griesbach
Details

Description Gabriele Mazzotta 2014-08-01 19:42:37 UTC
intel-rst is no longer working with v3.16 (tested rc6 and rc7).

Loading the driver results in "intel_rapid_start: probe of INT3392:00 failed with error -22"

It works perfectly with v3.14, v3.15 was not tested.
Comment 1 Aaron Lu 2014-08-04 02:36:17 UTC
Please attach the dmesg, is there any more error message about this driver?
Comment 2 Aaron Lu 2014-08-04 02:36:47 UTC
Faulting driver: drivers/platform/x86/intel-rst.c, so moves to platform-x86 category.
Comment 3 Gabriele Mazzotta 2014-08-04 15:14:05 UTC
Created attachment 145101 [details]
dmesg

I attached the dmesg as requested.

Unloading and inserting the module gives the error already mentioned only.
Comment 4 Rafael J. Wysocki 2014-08-05 02:03:28 UTC
@Aaron: I think that this is an ACPI enumeration bug.  Back to ACPI.

@Gabriele: Please test 3.15 too.
Comment 5 Gabriele Mazzotta 2014-08-05 10:08:49 UTC
3.15 tested, intel-rst is working.
Comment 6 Len Brown 2014-08-05 14:16:59 UTC
please attache the output from acpidump
Comment 7 Gabriele Mazzotta 2014-08-05 14:23:17 UTC
Created attachment 145231 [details]
acpidump

Here the output of acpidump.
Comment 8 Zhang Rui 2014-08-18 06:36:27 UTC
The root cause of this bug is that
1. the _CID of this INT3392 device IS PNP0C02, thus the acpi_pnp scan handler will be attached to this device.
2. acpi_device_probe() will return -22 if a device already has a handler attached.
Comment 9 Rafael J. Wysocki 2014-08-19 23:24:04 UTC
Created attachment 147441 [details]
ACPI / scan: Bind ACPI drivers to device object on PNP bus type

Does this patch make any difference?
Comment 10 Gabriele Mazzotta 2014-08-19 23:51:05 UTC
Yes, it fixes the problem on v3.16, thanks.
Comment 11 Rafael J. Wysocki 2014-08-20 03:19:46 UTC
Created attachment 147471 [details]
ACPI / scan: Bind ACPI drivers to device object on PNP bus type

Thanks for the confirmation.

Can you please try this slightly modified version of the patch too?
Comment 12 Gabriele Mazzotta 2014-08-20 12:27:00 UTC
I tested it. Also this one fixes the problem.
Comment 13 Rafael J. Wysocki 2014-08-21 03:49:33 UTC
Patch: https://patchwork.kernel.org/patch/4755451/
Comment 14 Rafael J. Wysocki 2014-08-21 03:50:24 UTC
*** Bug 81971 has been marked as a duplicate of this bug. ***
Comment 15 Zhang Rui 2014-08-21 12:11:17 UTC
Created attachment 147611 [details]
PATCH: introduce ACPI motherboard resource management

can you please check if this patch fixes the problem for you?
Not that you just need to apply this one on top of 3.17-rc1, without the patch from Rafael.
Comment 16 Gabriele Mazzotta 2014-08-21 12:48:32 UTC
Patch applied on top of v3.17-rc1, intel-rst is loaded with no issues.
Comment 17 Dirk Griesbach 2014-08-21 13:40:57 UTC
Created attachment 147621 [details]
grep . /sys/bus/pnp/devices/*/id with patch from comment #15

(In reply to Zhang Rui from comment #15)
> can you please check if this patch fixes the problem for you?

Patch applied on top of 3.16.1. Keys are not working but hpet probe error is gone:
$ dmesg | grep -i -- 'error'
[   43.251408] Fujitsu laptop FUJ02B1 ACPI brightness driver: probe of FUJ02B1:00 failed with error -22
[   43.251640] Fujitsu laptop FUJ02E3 ACPI hotkeys driver: probe of FUJ02E3:00 failed with error -22
Comment 18 Zhang Rui 2014-08-21 15:09:56 UTC
Dirk,
please describe the issue of your laptop as comment #17 is your first post in this thread. And does Rafael' patch in comment #11 works for you?
please attach the acpidump output of your laptop.
Comment 19 Rafael J. Wysocki 2014-08-21 16:10:27 UTC
@Dirk: You said in bug #81971 that the patch from comment #13 worked for you, is that correct?

@Rui: I'm not sure what you're trying to do here?
Comment 20 Dirk Griesbach 2014-08-21 16:23:31 UTC
Created attachment 147681 [details]
acpidump

(In reply to Zhang Rui from comment #18)
> please describe the issue of your laptop as comment #17 is your first post

What's the right procedure in this case as my bug at https://bugzilla.kernel.org/show_bug.cgi?id=81971 is marked as a duplicate of this bug?

From there:

"""
The Fujitsu FSC S7110 laptop has four hotkeys labeled 1, 2, E, R right above the keyboard which were supported through the fujitsu-laptop mdoule and were recognized and mapped by X11 as XF86Launch1 to XF86Launch4. Since Linux 3.16 they are not working anymore.

After a bisect,
|commit eec15edbb0e14485998635ea7c62e30911b465f0
|Author: Zhang Rui <rui.zhang@intel.com>
|Date:   Fri May 30 04:23:01 2014 +0200
|
|    ACPI / PNP: use device ID list for PNPACPI device enumeratio
was choosen to be the commit which disabled this functionality.
"""

> in this thread. And does Rafael' patch in comment #11 works for you?

It does.

> please attach the acpidump output of your laptop.

It's from v3.15.10. I didn't get acpidump to work with v3.16 but maybe that's just me being all thumbs.
Comment 21 Dirk Griesbach 2014-08-21 16:26:16 UTC
(In reply to Rafael J. Wysocki from comment #19)
> @Dirk: You said in bug #81971 that the patch from comment #13 worked for
> you, is that correct?

Yes.
Comment 22 Zhang Rui 2014-08-22 01:22:31 UTC
(In reply to Dirk Griesbach from comment #20)
> Created attachment 147681 [details]
> acpidump
> 
> (In reply to Zhang Rui from comment #18)
> > please describe the issue of your laptop as comment #17 is your first post
> 
> What's the right procedure in this case as my bug at
> https://bugzilla.kernel.org/show_bug.cgi?id=81971 is marked as a duplicate
> of this bug?
> 
sorry, I didn't refer to that bug so I'm confused for your last post.

Yes, both regressions are caused by the same commit. But IMO, the problem you got is a little different than this bug, please try the patch I attached in your bug report and check if it fixes the problem for you or not.
Comment 23 Rafael J. Wysocki 2014-08-25 23:26:34 UTC
Updated patch: https://patchwork.kernel.org/patch/4776971/
Comment 24 Len Brown 2015-07-22 00:56:44 UTC
Linux-v3.17-rc3:

commit fc2e0a8326d1b21d11ef8213298e5302867fed2c
Author: Rafael J. Wysocki <rafael.j.wysocki@intel.com>
Date:   Tue Aug 26 01:29:21 2014 +0200

    ACPI / scan: Allow ACPI drivers to bind to PNP device objects

Note You need to log in before you can comment on or make changes to this bug.